Toc container gap fix

--- a/src/app/blog/[slug]/SlugPage.module.css
+++ b/src/app/blog/[slug]/SlugPage.module.css
@@ -25,7 +25,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 0.4rem;
+  gap: 2rem;
 }
 
 .tocHeadingTitle {
